--- a/libraries/tools/kotlin-gradle-plugin/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin/build.gradle
@@ -32,6 +32,7 @@ pill {
 
 dependencies {
     compile project(':kotlin-gradle-plugin-api')
+
     compileOnly project(':compiler')
     compileOnly project(':compiler:incremental-compilation-impl')
     compileOnly project(':compiler:daemon-common')
@@ -43,6 +44,8 @@ dependencies {
     compileOnly project(':kotlin-compiler-runner')
     compileOnly project(':kotlin-annotation-processing')
     compileOnly project(':kotlin-annotation-processing-gradle')
+
+    compile 'org.jetbrains.kotlin:kotlin-native-utils:0.8.1'
 
     compileOnly 'com.android.tools.build:gradle:2.0.0'
     compileOnly 'org.codehaus.groovy:groovy-all:2.4.12'
